@@ -4,7 +4,7 @@ buildscript {
       mavenLocal()
    }
    dependencies {
-      classpath "us.ihmc:ihmc-build:0.11.2"
+      classpath "us.ihmc:ihmc-build:0.12.2"
    }
 }
 apply plugin: "us.ihmc.ihmc-build"
@@ -15,6 +15,10 @@ ihmc {
    configureDependencyResolution()
    configurePublications()
 }
+
+// compileJava {
+//    options.compilerArgs += ["--add-modules", "java.xml.bind"]
+// }
 
 testSuites {
    def prefix = "LIBS-IHMCOPENROBOTICSSOFTWARE"
